fix template and route errors in employee directory

--- a/employee-directory-app/templates/home.html
+++ b/employee-directory-app/templates/home.html
@@ -19,6 +19,7 @@
             <label>Search
               <input type="text" name="employee_name" placeholder="first name">
             </label>
+            <input type="submit" value="Search">
           </form>
 
           </p>
